Fix pagination gaps

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -212,9 +212,9 @@ $pagination-active-color:          $navy;
 $pagination-active-bg:             $white;
 $pagination-active-border-color:   $border-color;
 
-$pagination-disabled-color:        $white;
+$pagination-disabled-color:        $gray;
 $pagination-disabled-bg:           $white;
-$pagination-disabled-border-color: $white;
+$pagination-disabled-border-color: $border-color;
 
 // Alerts
 
